# refinery

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  SKILL.md  STYLEGUIDE.md  code-upgrade.bat  code-upgrade.py  codecov.yml  doctxt.py  mptest.bat  mptest.sh  pyproject.toml  pytest.ini  requirements.txt  run-crawl.py  run-flake.py  run-ldeps.py  run-pdoc3.py  run-tests.py  run-units.py  setup-venv.ps1  setup-venv.py  setup-venv.sh  setup.cfg  setup.py  strip-tutorials.py  update.ps1  update.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-unit-request.md
.github/workflows/: docs.yml  forward.yml  pr.yml  preview.yml  publish.yml  python-package.yml  python-publish.yml  test-template.yml  test.yml
pdoc3-template/: config.mako  css.mako  html.mako
refinery/: __init__.py  __init__.pyi  __unit__.py  explore.py  run-pwsh.ps1  shell.py
samples/: README.md  __init__.py  _decode.bat  _encode.bat
scripts/: crawler.py  js-node-fuzzer.py  list-dependencies.py  pdoc3.py  strip-tutorials.py  test.py  update-unit-map.py
shells/: README.md  zsh
test/: __init__.py  test_explore.py
tutorials/: README.md  __init__.py  boilerplate.py  tbr-files.v0x01.netwalker.dropper.ipynb  tbr-files.v0x02.amadey.loader.ipynb  tbr-files.v0x03.seduploader.ipynb  tbr-files.v0x04.run.length.encoding.ipynb  tbr-files.v0x05.flare.on.9.ipynb  tbr-files.v0x06.Qakbot.Decoder.ipynb  tbr-files.v0x07.DCRat.ipynb  tbr-files.v0x08.flare.on.10.ipynb  trf.0x01.netwalker.dropper.ipynb
(+1324 files in other folders)
