[build-system]
requires = [
    "Pillow",
    "asn1crypto",
    "capstone",
    "chardet",
    "colorama",
    "defusedxml",
    "extract_msg",
    "javaobj-py3>=0.4.0.1",
    "jsbeautifier",
    "macholib",
    "msgpack",
    "msoffcrypto-tool",
    "numpy==1.19.3",
    "olefile",
    "oletools",
    "openpyxl",
    "pefile",
    "phpserialize",
    "pypcapkit[scapy]",
    "py7zr",
    "pycdlib",
    "pycryptodome",
    "pyelftools",
    "pyperclip",
    "python-registry",
    "setuptools",
    "toml",
    "uncompyle6",
    "wheel",
    "xdis",
    "xlrd2",
]
build-backend = "setuptools.build_meta"