[build-system]
requires = [
    "asn1crypto",
    "chardet",
    "colorama",
    "defusedxml",
    "extract_msg",
    "javaobj-py3>=0.4.0.1",
    "macholib",
    "msgpack",
    "msoffcrypto-tool",
    "numpy==1.19.3",
    "olefile",
    "oletools",
    "openpyxl",
    "pefile",
    "phpserialize",
    "py7zr",
    "pycdlib",
    "pycryptodome",
    "pyelftools",
    "pyperclip",
    "setuptools",
    "toml",
    "wheel",
    "xlrd2",
]
build-backend = "setuptools.build_meta"