[build-system]
requires = [
    "colorama",
    "defusedxml",
    "lief>=0.17.0",
    "msgpack>=1.0.0",
    "pycryptodomex",
    "setuptools",
    "toml",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_sort_within_sections = false
from_first = false
lines_between_types = 1
